@@ -16,7 +16,7 @@
         
         <CONTROLS>
         	<FORWARDS>
-        		<FORWARD ACTIVE="Y" SRC="camera.jpg" DEST="http://127.0.0.1:8081/image.jpg" />
+        		<FORWARD ACTIVE="Y" SRC="camera.png" DEST="http://www.abc.net.au/homepage/2008/styles/abc_logo.png" />
         		<FORWARD ACTIVE="Y" SRC="dir/" DEST="http://127.0.0.1:8081/UserManager/" />
         	</FORWARDS>
         </CONTROLS>
