@@ -58,10 +58,10 @@ public class Security {
     fullClients = new HashMap<String,Boolean> ();
     postOnlyClients = new HashMap<String,Boolean> ();
        
-    /*
+    //*
 	connected = true;
 	return ;
-  */
+  /*
     
     
 	InputStreamReader reader = new InputStreamReader(System.in);
