@@ -5,7 +5,13 @@ Added ForwardRequest servlet to handle the request forwarding.
 In any config file CONTROL block add a forward section as follows.
 
 {{{
-
+        
+        <CONTROLS>
+        	<FORWARDS>
+        		<FORWARD ACTIVE="Y" SRC="camera.jpg" DEST="http://www.abc.net.au/homepage/2008/styles/abc_logo.png" />
+        		<FORWARD ACTIVE="Y" SRC="dir/" DEST="http://127.0.0.1:8081/UserManager/" />
+        	</FORWARDS>
+        </CONTROLS>
 }}}
 
 == 4/Mar/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b92.zip V1.6-b92] 
